fix scrollbar

--- a/app/assets/stylesheets/main/main_body.scss
+++ b/app/assets/stylesheets/main/main_body.scss
@@ -1,23 +1,11 @@
 @import 'variables';
 
-.categoryBanner {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 300px;
-
-  background: url(http://res.cloudinary.com/dvylj9hyw/image/upload/b_black,o_40/v1501174554/banner.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 .mainBanner {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 300px;
+  width: 100%;
+  overflow: hidden;
 
   background: url(http://res.cloudinary.com/dvylj9hyw/image/upload/b_black,o_40/v1501174554/banner.jpg);
   background-attachment: fixed;
