--- a/app/assets/stylesheets/main/main_category.scss
+++ b/app/assets/stylesheets/main/main_category.scss
@@ -1,9 +1,22 @@
 @import 'variables';
 
+.categoryBanner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background: url(http://res.cloudinary.com/dvylj9hyw/image/upload/b_black,o_40/v1501174554/banner.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .categories {
   display: flex;
   justify-content: center;
   padding: 15px;
+  margin: 215px;
   width: 100%;
   background-color: rgba(30,38,36,0.5);
 
@@ -43,6 +56,9 @@
       i {
         margin-top: 10px;
         color: white;
+      }
+      h1 {
+        color: white
       }
     }
   }
