--- a/app/assets/stylesheets/main/main_nav.scss
+++ b/app/assets/stylesheets/main/main_nav.scss
@@ -2,8 +2,10 @@
 
 .nav-background {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-  width:100%;
+  width: 100%;
   height: 60px;
 
   opacity: 0.6;
